rbx_binary/src/tests/snapshots/rbx_binary__tests__util__bloomeffect__decoded.snap
---
source: rbx_binary/src/tests/util.rs
expression: decoded_viewed

---
- referent: referent-0
  name: Bloom
  class: BloomEffect
  properties:
    AttributesSerialize:
      BinaryString: ""
    Enabled:
      Bool: true
    Intensity:
      Float32: 0.44999998807907107
    Size:
      Float32: 24.700000762939454
    Tags:
      BinaryString: ""
    Threshold:
      Float32: 2.2850000858306886
  children: []

